Change image paths to relative URLs
Updated image paths to be relative in index.html.

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     <main class="news-container">
         <div class="col-left">
             <div class="news-card">
-                <img src="/image/1.jpg" alt="News Image" class="news-img">
+                <img src="./image/1.jpg" alt="News Image" class="news-img">
                 <h3>Iran protests: 'People are more angry and determined now'</h3>
                 <p>People inside Iran tell the BBC why demonstrators are turning out in massive numbers.</p>
                 <div class="meta">2 hrs ago | Middle East</div>
             </div>
             <div class="news-card">
-                <img src="/image/2.png" alt="News Image" class="news-img">
+                <img src="./image/2.png" alt="News Image" class="news-img">
                 <h3>Colombia sees 'real threat' of US military action, president tells BBC</h3>
                 <p>Gustavo Petro tells the BBC's Ione Wells that the United States is treating other nations as part of
                     a US "empire", after Trump threatened Colombia with military action.</p>
@@ -60,7 +60,7 @@
 
         <div class="col-center">
             <div class="featured-card">
-                <img src="/image/3.jpg" alt="Live News" class="featured-img">
+                <img src="./image/3.jpg" alt="Live News" class="featured-img">
                 <h2><span class="live-badge">LIVE</span> More protests erupt in Iran as supreme leader accuses crowds of
                     'trying to please Trump'</h2>
                 <p>The country is under a nationwide internet blackout after almost two weeks of widespread
