--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
             <div class="news-card">
                 <img src="./image/1.jpg" alt="News Image" class="news-img">
                 <h3>Iran protests: 'People are more angry and determined now'</h3>
-                <p>People inside Iran tell the BBC why demonstrators are turning out in massive numbers.</p>
+                <p>People inside Iran tell the AAB why demonstrators are turning out in massive numbers.</p>
                 <div class="meta">2 hrs ago | Middle East</div>
             </div>
             <div class="news-card">
                 <img src="./image/2.png" alt="News Image" class="news-img">
-                <h3>Colombia sees 'real threat' of US military action, president tells BBC</h3>
-                <p>Gustavo Petro tells the BBC's Ione Wells that the United States is treating other nations as part of
+                <h3>Colombia sees 'real threat' of US military action, president tells AAB</h3>
+                <p>Gustavo Petro tells the AAB's Ione Wells that the United States is treating other nations as part of
                     a US "empire", after Trump threatened Colombia with military action.</p>
                 <div class="meta">8 hrs ago | World</div>
             </div>
@@ -68,14 +68,14 @@
                 <ul class="sub-headlines">
                     <li>Buildings in Tehran set on fire as demonstrations spread across Iran</li>
                 </ul>
-                <div class="meta">2 hrs ago | BBC InDepth</div>
+                <div class="meta">2 hrs ago | AAB InDepth</div>
             </div>
         </div>
 
         <div class="col-right">
             <div class="news-list-item">
                 <h3>'He's crazy': AAB speaks to Greenlanders about Trump's threats</h3>
-                <p>The BBC's Europe Editor Katya Adler visits the Arctic island to ask what people think of the US
+                <p>The AAB's Europe Editor Katya Adler visits the Arctic island to ask what people think of the US
                     president's plans.</p>
                 <div class="meta">5 hrs ago | World</div>
             </div>
@@ -99,5 +99,27 @@
             </div>
         </div>
     </main>
+
+    <div class="only-bbc-container">
+        <h3 class="section-header">ONLY FROM THE AAB</h3>
+        <div class="bbc-grid">
+            <div class="bbc-card">
+                <img src="./image/4.jpg" alt="Standing on one leg" class="bbc-img">
+                <h3 class="bbc-title">The surprising benefits of standing on one leg</h3>
+                <p>Spending a few minutes each day balancing on a single limb can make you stronger, boost your
+                    memory
+                    and keep your brain healthier.</p>
+            </div>
+            <div class="bbc-card">
+                <img src="./image/5.jpg" alt="Atlanta food scene" class="bbc-img">
+                <h3 class="bbc-title">Why Atlanta's culinary scene is getting food lovers excited</h3>
+                <p>The city's food scene is redefining southern hospitality with bold and unpretentious global
+                    flavours.
+                </p>
+            </div>
+        </div>
+    </div>
+
+</body>
 
 </html>
